fix(ZNTA-2005) set textarea max withds to 100% to avoid overflow

--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -6331,6 +6331,10 @@ i.i--left.i--lock, i.i--left.i--trash {
   padding-bottom:@spacing-base-and-a-half;
 }
 
+textarea {
+  max-width: 100%;
+}
+
 // @screen-xs variable depreciated
 @media (max-width: 29.375rem) {
   .view {
